manifest/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-app
  namespace: items-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: items-app
  template:
    metadata:
      labels:
        app: items-app
    spec:
      containers:
        - name: items-app
          image: ridwan3030/items-app:13   # Your image
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
